# data-notebooks

./: .env.example  .envrc  Dockerfile  LICENSE  README.md  graph_dask.ipynb  index.html  pyproject.toml
.devcontainer/: devcontainer.json
_layouts/: post.html
css/: style.css
docs/: columnar-storage-parquet.md  index.html
docs/assets/css/: style.scss
notebooks/: columnar_storage.ipynb
notebooks/util/: __init__.py  profile.py
web/: columnar_storage.md
