[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
base = [
    "cryptography>=45.0.6",
    "google-api-python-client>=2.178.0",
    "google-cloud-storage>=3.2.0",
    "httplib2>=0.22.0",
    "jupyter>=1.1.1",
    "lz4>4.3.3",
    "pandas>=2.3.1",
]
dask = [
    "dask-cloudprovider>=2024.9.1",
    "dask[array]>=2025.7.0",
    "toolz>0.12.0",
    "tornado>6.5.1",
]
polars = [
    "polars>=1.32.2",
    "pyarrow>=21.0.0",
]
